<layout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_16dp">

            <EditText
                android:id="@+id/editTextCityName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/city_name"
                android:inputType="text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/startDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:layout_marginTop="@dimen/small_8dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/editTextCityName"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <DatePicker
                android:id="@+id/datePickerStartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:spinnersShown="true"
                app:layout_constraintTop_toBottomOf="@id/startDateTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/endDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:layout_marginTop="@dimen/small_8dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/datePickerStartDate"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <DatePicker
                android:id="@+id/datePickerEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:spinnersShown="true"
                app:layout_constraintTop_toBottomOf="@id/endDateTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <Button
                android:id="@+id/buttonOk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:layout_marginTop="@dimen/medium_16dp"
                app:layout_constraintTop_toBottomOf="@id/datePickerEndDate"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginTop="@dimen/small_8dp"
                app:layout_constraintTop_toBottomOf="@id/buttonOk"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
